# forecasting-ai-example

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.githooks/: post-checkout
app/: __init__.py  ai.py  calendar.py  config.py  csv_forecasts.py  database.py  main.py  models.py  seed.py
app/prompts/: ai_researcher.md  recommendation_policy.md
app/static/: forecast_detail.js  styles.css
app/templates/: _ai_findings.html  _ai_job_status.html  base.html  docs.html  forecast_detail.html  index.html
backend/: server.js
docs/: AIController.vb  AIController_Deployment_Notes.md  AIT_DDL.sql  OpenAISettings.vb  architecture.md  initial-plan.md  original-prompt.md
frontend/: .npmrc  .npmrc.example  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: main.ts  styles.css
frontend/src/app/: app.config.ts  app.html  app.ts  forecast-api.ts
scripts/: refresh-after-branch-switch.js
tests/: conftest.py  test_ai.py  test_csv_forecasts.py
