[project]
name = "forecasting-ai-example"
version = "0.1.0"
description = "POC webapp for AI-assisted sales forecasting"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "openai>=1.93.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
