[project]
name = "forecasting-ai-example"
version = "0.1.0"
description = "Python forecast helpers retained from the original POC"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.93.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
